Use data in methods

--- a/analysis/apa6.sty
+++ b/analysis/apa6.sty
@@ -23,6 +23,9 @@
 \usepackage{xcolor}
 % make captions italic
 
+% number lines
+% \usepackage{lineno}
+% \linenumbers
             
 % bibliography
 $if(csl-refs)$
@@ -52,6 +55,9 @@ najko.jahn@sub.uni-goettingen.de
 
 \begin{document}
 \maketitle
+
+% QSS wants numbered sections
+%\setcounter{secnumdepth}{2}
 
 $body$
 
