--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1,3 +1,21 @@
+@misc{goldoa,
+  author       = {Bruns, Andre and Cakir, Yusuf and Kaya, Sibel and Beidaghi, Samaneh},
+  publisher    = {Bielefeld University},
+  title        = {{ISSN-Matching of Gold OA Journals (ISSN-GOLD-OA) 5.0}},
+  url          = {https://pub.uni-bielefeld.de/record/2961544},
+  doi          = {10.4119/unibi/2961544},
+  year         = {2022},
+}
+
+@misc{jahn2023,
+  author = {Jahn, Najko and Haupka, Nick and Hobert, Anne},
+  title = {Analysing and reclassifying open access information in OpenAlex},
+  url = {https://subugoe.github.io/scholcomm_analytics/posts/oalex_oa_status/},
+  howpublished = {Blog post},
+  year = {2023}
+}
+
+%%%%
 @misc{OS_Monitor,
   title = {Open Science Monitor: Trends for open access to publications},
   url = {https://ec.europa.eu/info/research-and-innovation/strategy/goals-research-and-innovation-policy/open-science/open-science-monitor/trends-open-access-publications_en},
@@ -596,6 +614,17 @@ year = {2020}
   title = {It's the workflows, stupid! What is required to make `offsetting' work for the open access transition}, 
   journal = {Insights the {UKSG} journal}
 }
+
+@article{Larivi_re_2016, 
+ title={Contributorship and division of labor in knowledge production},
+ volume={46},
+ ISSN={1460-3659},
+ DOI={10.1177/0306312716650046},
+ number={3},
+ journal={Social Studies of Science},
+ author={Larivière, Vincent and Desrochers, Nadine and Macaluso, Benoît and Mongeon, Philippe and Paul-Hus, Adèle and Sugimoto, Cassidy R},
+ year={2016},
+ month=jun, pages={417–435} }
 
 @article{Marques_2019, 
   doi = {10.1629/uksg.489}, 
