--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -23,8 +23,16 @@
 \usepackage{xcolor}
 % make captions italic
 
+% number lines
+% \usepackage{lineno}
+% \linenumbers
             
 % bibliography
+\newlength{\cslhangindent}
+\setlength{\cslhangindent}{1.5em}
+\newenvironment{CSLReferences}%
+  {}%
+  {\par}
 
 % tightlist
 \providecommand{\tightlist}{%
@@ -45,6 +53,9 @@ najko.jahn@sub.uni-goettingen.de
 \begin{document}
 \maketitle
 
+% QSS wants numbered sections
+%\setcounter{secnumdepth}{2}
+
 \hypertarget{introduction}{%
 \section{Introduction}\label{introduction}}
 
@@ -52,17 +63,17 @@ najko.jahn@sub.uni-goettingen.de
 \section{Methods and data}\label{methods-and-data}}
 
 This study combines data from multiple publicly available data sources
-as visualised in Figure 1. Data gathering involved transformative
-agreement data retrieved from the cOAlition S Journal Checker Tool,
-which provided information about journal portfolios and participating
-institutions. After identification of hybrid journals, Crossref served
-as the primary data source for article-level metadata including Creative
-Commons (CC) license information to determine open access articles on
-publisher websites. OpenAlex provided first author affiliation metadata
-that were subsequently linked to the transformative agreement data to
-identify open access articles published through these agreements. In
-total, the compiled data set consists of 8,942,669 articles published in
-12,858 hybrid journals between 2018 and 2022.
+as visualised in Figure 1. Transformative agreement data retrieved from
+the cOAlition S Journal Checker Tool provided information about journal
+portfolios and participating institutions. After identification of
+hybrid journals, Crossref served as the primary data source for
+article-level metadata including Creative Commons (CC) license
+information to determine open access articles on publisher websites.
+OpenAlex provided first author affiliation metadata that were
+subsequently linked to the transformative agreement data to identify
+open access articles published through these agreements. In total, the
+compiled data set consists of 8,942,669 articles published in 12,858
+hybrid journals between 2018 and 2022.
 
 \begin{figure}
 
@@ -79,42 +90,97 @@ data}\label{transformative-agreement-and-hybrid-journal-data}}
 
 Data gathering started with obtaining journals included in
 transformative agreements using the cOAlition S' Journal Checker Tool
-publicly available Transformative Agreement Data dump. The dump
-consisted of multiple online Google spreadsheets where each data file
-represented one agreement listed in the ESAC Transformative Agreement
-Registry. Each file comprised information about journals and
-institutions involved per agreement. Because the Journal Checker Tool
-only collected data about active transformative agreements, four
-different snapshots were used for this analysis:the archived version
-from July 2021, July 2022, May 2023 and the most current dump downloaded
-on 11 December 2022. This ensured that transformative agreements, which
-ended in 2021, were also included in the analysis. Agreements ending
-before 2021 could not be obtained. Overall, the combined Transformative
-Agreement Data dumps contained 729 agreements.
+publicly available Transformative Agreement Data dump.\footnote{\url{https://journalcheckertool.org/transformative-agreements/}}
+The dump consisted of multiple online Google spreadsheets where each
+data file represented one agreement listed in the ESAC Transformative
+Agreement Registry.\footnote{\url{https://esac-initiative.org/about/transformative-agreements/agreement-registry/}}
+Each file comprised information about journals and institutions involved
+per agreement. Because the Journal Checker Tool only only provides data
+about active transformative agreements, removing data representing
+expired transformative agreements, four different snapshots were used
+for this analysis: self-archived version from July 2021, July 2022, and
+May 2023, as well as the most current dump downloaded on 11 December
+2023. This ensured that transformative agreements, which ended in 2021,
+were included in the analysis. Agreements ending before 2021 could not
+be obtained. Overall, the combined Transformative Agreement Data dumps
+contained 729 out of 869 agreements listed in the ESAC registry by
+December 2023.
 
 The Transformative Agreement Data dumps linked agreements to journals
-represented by journal names and ISSNs. After mapping ISSN variants to
+represented by journal names and ISSN. After mapping ISSN variants to
 the corresponding linking ISSN (ISSN-L) as provided by The ISSN
-International Centre. Journals were associated to publishers using the
+International Centre, journals were associated to publishers using the
 ESAC ID, a unique identifier for transformative agreements in the ESAC
-Transformative Agreement Registry.
-
-Because transformative agreements can include both full open access and
-hybrid journals, journal data were complemented with information about a
-journal's open access status using multiple sources: the Directory of
-Open Access Journals (DOAJ) downloaded on 4 October 2022, OpenAlex
-(September 2022 dump) and the the Bielefeld list of GOLD OA journals. In
-total, 3,439 full open access journals were excluded. Figure shows a
-substantial overlap between the three data sources of 72\%. However,
-combining different data sources considerably extended the journal
-matching to exclude full open access journals from transformative
-agreements. The Gold OA journals dataset alone adds 176 journals, while
-the DOAJ comprised 10 full open access journals not listed in either of
-the other two sources. These full open access journals were mostly
-launched in 2022.
+Transformative Agreement Registry. Because transformative agreements can
+include both full open access and hybrid journals, journal data were
+complemented with information about a journal's open access status using
+multiple sources: the Directory of Open Access Journals (DOAJ)
+downloaded on 12 December 2023\footnote{\url{https://doaj.org/csv}},
+OpenAlex (November 2023) and the the Bielefeld list of GOLD OA journals
+(Bruns et al., 2022). In total, 3,439 full open access journals were
+excluded based on journal title matching. Figure shows an overlap
+between the three data sources of 72\%. However, combining different
+data sources considerably extended the journal matching to exclude full
+open access journals from transformative agreements. The Gold OA
+journals dataset alone adds 176 journals, while the DOAJ comprised 10
+full open access journals not listed in either of the other two sources.
+These full open access journals were mostly launched in 2022.
 
 \hypertarget{article-metadata}{%
 \subsection{Article metadata}\label{article-metadata}}
+
+After identifying hybrid journals included in transformative agreements,
+article metadata was retrieved from Crossref and mapped to OpenAlex to
+obtain affiliation metadata. The Crossref November 2023 database
+snapshot was used to determine the journals' yearly publication volume
+for the 5-year period 2018 to 2022. Because Crossref metadata did not
+distinguish between research articles and other types of journal
+content, only included articles published in regular issues indicated by
+non-numeric pagination were included. Furthermore, an expanded version
+of Unpaywall's paratext recognition approach was applied to exclude
+non-scholarly journal content such as table of contents.
+
+Open access articles in hybrid journals were identified through Creative
+Commons (CC) license information in Crossref metadata and mapped them to
+the different CC variants. License information relative to the
+``accepted manuscript (AM)'' version were not considered. Crossref was
+used for open access identification because transformative agreement
+standards require publishers to deposit CC license information.
+Comparing Crossref license coverage with OpenAlex, which re-uses open
+access evidence from Unpaywall, a widely used open access discovery
+service, revealed a slight discrepancy between these two data sources.
+Overall, 847,107 articles with CC license were retrieved using Crossref,
+while 1,055,765 articles were tagged as ``hybrid'' in OpenAlex. The
+biggest differences concerned articles published between 2018 and 2020,
+and among some publishers that presumably did not provide CC license
+information to Crossref including AIP Publishing, American Physiological
+Society and Emerald (\textbf{ludo?}). Crossref license metadata was more
+complete with regard to articles from the publisher Wiley. During the
+data collection, inconsistent open access status information in previous
+OpenAlex version was observed (Jahn et al., 2023), which might explain
+this discrepancy.
+
+Next, the number and proportion of open access articles per journal was
+calculated. To improve the identification of hybrid journals, journals
+with an open access proportion above 95\% were excluded. This further
+step allowed to remove additional 241 full open access journals.
+
+Affiliation data is a crucial data point for the planning and evaluation
+of transformative agreements (Geschuhn \& Stone, 2017; Schimmer et al.,
+2015). Author affiliations were retrieved from OpenAlex. Generally,
+corresponding authors are responsible to arrange open access publication
+(Borrego et al., 2020). However, because of low coverage, this study
+focuses on first author and their affiliations. First authors typically
+contribute most to a paper and are often considered lead author research
+papers (Larivière et al., 2016). Overall, around 90\% of studied
+articles had first author affiliation metadata in OpenAlex, whereas the
+coverage of articles with corresponding author information was around
+54\%.
+
+In total, the compiled data set consists of 8,922,146 articles published
+in 12,857 hybrid journals between 2018 and 2022. They represented around
+
+\begin{center}\includegraphics[width=0.99\linewidth]{fig/method_fig-1} \end{center}
 
 \hypertarget{data-analysis}{%
 \subsection{Data Analysis}\label{data-analysis}}
@@ -445,5 +511,42 @@ where only a few or no agreements were in place.
 \subsubsection{Supplements}\label{supplements}}
 
 \begin{center}\includegraphics[width=0.99\linewidth]{fig/unnamed-chunk-10-1} \end{center}
+
+\hypertarget{refs}{}
+\begin{CSLReferences}{1}{0}
+\leavevmode\vadjust pre{\hypertarget{ref-Borrego_2020}{}}%
+Borrego, Á., Anglada, L., \& Abadal, E. (2020). Transformative
+agreements: Do they pave the way to open access? \emph{Learned
+Publishing}. \url{https://doi.org/10.1002/leap.1347}
+
+\leavevmode\vadjust pre{\hypertarget{ref-goldoa}{}}%
+Bruns, A., Cakir, Y., Kaya, S., \& Beidaghi, S. (2022).
+\emph{{ISSN-Matching of Gold OA Journals (ISSN-GOLD-OA) 5.0}}. Bielefeld
+University. \url{https://doi.org/10.4119/unibi/2961544}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Geschuhn_2017}{}}%
+Geschuhn, K., \& Stone, G. (2017). It's the workflows, stupid! What is
+required to make {``offsetting''} work for the open access transition.
+\emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
+\url{https://doi.org/10.1629/uksg.391}
+
+\leavevmode\vadjust pre{\hypertarget{ref-jahn2023}{}}%
+Jahn, N., Haupka, N., \& Hobert, A. (2023). \emph{Analysing and
+reclassifying open access information in OpenAlex}. Blog post.
+\url{https://subugoe.github.io/scholcomm_analytics/posts/oalex_oa_status/}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Larivi_re_2016}{}}%
+Larivière, V., Desrochers, N., Macaluso, B., Mongeon, P., Paul-Hus, A.,
+\& Sugimoto, C. R. (2016). Contributorship and division of labor in
+knowledge production. \emph{Social Studies of Science}, \emph{46}(3),
+417--435. \url{https://doi.org/10.1177/0306312716650046}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Schimmer_2015}{}}%
+Schimmer, R., Geschuhn, K., \& Vogler, A. (2015). \emph{{Disrupting the
+subscription journals'business model for the necessary large-scale
+transformation to open access}}. Max Planck Digital Library.
+\url{https://doi.org/10.17617/1.3}
+
+\end{CSLReferences}
 
 \end{document}
